ChangeLog for herdstat

2005-05-29 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.0_rc2).
	* src/action_pkg_handler.cc, src/action_pkg_handler.hh: Rewrote most
	of the package handler, due to a huge design flaw.  It would
	previously parse every metadata.xml PER non-option arg, so if you
	specified two non-opt args, it would parse every metadata.xml twice.
	Also, --with-{herd,maintainer} option args are now interpreted as a
	regular expression for more flexibility.
	* src/pkgcache.cc, src/pkgcache.hh: implement smarter caching.  Fex,
	it is now able to recognize reverse-lookups being the same.
	* src/metadata_xml_handler.cc, src/metadata_xml_handler.hh: Added
	overloaded dev_exists and herds_exists member functions that take a
	regex_T.
	* src/pkgcachectl.cc: s/pkgcache-dump/pkgcachectl/

2005-05-28 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Added zlib checks. Can be disabled via --without-zlib.
	Updated version (1.1.0_rc1).
	* lib/zlib.cc, lib/zlib.hh: Added a simple zlib wrapper class, zlib_T.
	* src/pkgcache.cc, src/pkgcache.hh: Make use of zlib_T if HAVE_LIBZ is
	defined, (de)compressing the cache when we read/write to disk.
	* src/formatter.cc: Modified highlight() to remove any ANSI colors
	before searching the devaway list.  Otherwise, std::find() will always
	fail if the current word has colors.
	* src/options.cc, src/herdstat.cc, bashcomp, doc/herdstat.1.in: Added
	--nopkgcache option for disabling cache lookups (queries are still
	cached, however).
	* src/metadatas.hh: Added set() member for manually setting a
	metadatas_T object to a certain list of metadatas.
	* src/action_pkg_handler.cc: If a cache lookup fails,
	--with-{herd,maintainer} is specified, and a previously cached query
	that is equivelent to the query (minus the --with of course), use the
	cached object to get a list of possibles.  For example, if a cached
	query of cron herd packages exists but one doesnt exists for cron herd